--- a/SftpSync/SftpSync.csproj
+++ b/SftpSync/SftpSync.csproj
@@ -60,7 +60,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="KeePass">
-      <HintPath>..\..\..\KeePass-2.34\KeePass.exe</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\KeePass Password Safe 2\KeePass.exe</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp">
     </Reference>
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CopyMemoryStream.cs" />
+    <Compile Include="ScpWebResponce.cs" />
     <Compile Include="SftpSync.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SftpWebRequest.cs" />
