--- a/SftpSync/SftpSync.csproj
+++ b/SftpSync/SftpSync.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>SftpSync</RootNamespace>
     <AssemblyName>SftpSync</AssemblyName>
-    <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <NoWin32Manifest>False</NoWin32Manifest>
     <SignAssembly>False</SignAssembly>
@@ -55,14 +55,14 @@
     <LangVersion>4</LangVersion>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\WORK\PORTABLE_SOFT\KeePass\</OutputPath>
+    <OutputPath>..\..\bins\KeePass\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="KeePass">
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\KeePass Password Safe 2\KeePass.exe</HintPath>
+      <HintPath>..\bins\KeePass.exe</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp">
     </Reference>
@@ -76,12 +76,11 @@
     </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq">
-    </Reference>
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CopyMemoryStream.cs" />
-    <Compile Include="ScpWebResponce.cs" />
+    <Compile Include="ScpWebResponse.cs" />
     <Compile Include="SftpSync.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SftpWebRequest.cs" />
